[package]
name = "rageroom"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
store = { path = "../store" }
rand = "0.9.0"
rand_chacha = "0.9.0"
format = { path = "../format" }
